[gd_scene load_steps=5 format=2]

[ext_resource path="res://maps/map_00/Map_00.tscn" type="PackedScene" id=1]
[ext_resource path="res://maps/map_00/Map_00_dev.gd" type="Script" id=2]
[ext_resource path="res://actors/seeker/Seeker.tscn" type="PackedScene" id=3]
[ext_resource path="res://actors/hider/Hider.tscn" type="PackedScene" id=4]

[node name="base" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Seeker00" parent="players" index="0" instance=ExtResource( 3 )]
position = Vector2( -125.457, 394.051 )
playerName = "Adam"

[node name="Hider00" parent="players" index="1" instance=ExtResource( 4 )]
position = Vector2( 571.712, 437.208 )
playerName = "Stacy"

[node name="Hider01" parent="players" index="2" instance=ExtResource( 4 )]
position = Vector2( 563.95, 298.046 )
playerName = "Alex"
